# nadoo-flow-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: conf.py
examples/: 01_basic_chat_bot.py  02_streaming_chat.py  04_rag_pipeline.py  advanced_features_example.py  final_features_example.py  hitl_example.py
src/nadoo_flow/: __init__.py  base.py  batch.py  caching.py  callbacks.py  chain.py  memory.py  memory_db.py  parsers.py  prompts.py  rate_limiting.py  resilience.py  streaming.py  tools.py
src/nadoo_flow/backends/: __init__.py  nadoo_backend.py  protocol.py  registry.py
tests/: test_backends.py  test_basic.py  test_chaining.py  test_error_handling.py  test_memory.py  test_memory_db.py  test_streaming.py  test_validation.py
